--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -3,8 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
-    <meta name="author" content="{{ site.author.name }}">
+	<meta name="generator" content="http://jekyllbootstrap.com/" />
+    <meta name="author" content="samuel bīn YÈ, 叶斌"/>
+	<meta name="robots" content="{{page.index}}INDEX,{{page.follow}}FOLLOW" />
+	{% if page.description %}
+<meta name="description" content="{{page.description}}" />
+{% else %}
+<meta name="description" content="{{site.description}}" />
+{% endif %}
+{% if page.categories %}
+<meta name="keywords" content="{{page.tags | join: ','}}" />
+{% else %}
+<meta name="keywords" content="医生博客, 全科医生" />
+{% endif %}
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
@@ -16,12 +27,24 @@
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
 
     <!-- Le fav and touch icons -->
-  <!-- Update these with your own images
-    <link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
-  -->
+  <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-31455699-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
   </head>
 
   <body>
@@ -55,5 +78,7 @@
     </div> <!-- /container -->
 
     {% include JB/analytics %}
-  </body>
+  </body><!--[if IE 6]>
+	<script src="//letskillie6.googlecode.com/svn/trunk/2/zh_CN.js"></script>
+<![endif]--></div>
 </html>
