--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -6,13 +6,11 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }} &larr; {{ page.top }}</title>
    <meta name="author" content="{{ site.author.name }}" />
-
    <link rel="start" href="{{ HOME_PATH }}" />
-
+   <link rel="author" href="https://plus.google.com/u/0/111730946330475204627" />
 	{% if page.keywords %}
-	<meta name="keywords" content="{{ page.keywords }}">
+	<meta name="keywords" content="{{ page.tags }}">
 	{% endif %}
-	
 	{% if site.author.feedburner %}
   	<link rel="alternate" type="application/atom+xml" href="http://feeds.feedburner.com/{{ site.author.feedburner }}" title="RSS feed" />
 	{% endif %}
