--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -11,7 +11,7 @@
    <link rel="author" href="https://plus.google.com/u/0/111730946330475204627" />
 	{% if page.tags %}
 	<meta name="keywords" content="{{ page.tags }}" />
-	{elseif}
+	{else}
 	<meta name="keywords" content="{{ page.title }}"/>
 	{% endif %}
 	{% if site.author.feedburner %}
