--- a/_includes/themes/mark-reid/post.html
+++ b/_includes/themes/mark-reid/post.html
@@ -18,6 +18,7 @@
   {% if page.next %}
     <a href="{{ page.next.url }}" class="next" title="{{ page.next.title }}">Next Post &rarr;</a>
   {% endif %}
+   <li class="prev"><a href="{{ BASE_PATH }}{{ post.url }}#top" rel="nofollow">Top</a></li>
   {% if page.previous %}
     <a href="{{ page.previous.url }}" class="prev" title="{{ page.previous.title }}">&larr; Earlier Post</a>
   {% endif %}
