--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -5,18 +5,26 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }} &larr; {{ page.top }}</title>
-   <meta name="author" content="{{ site.author.name }}" />
-   <meta name="description" content="{{ page.title }}"/>
+   <meta name="me" content="https://plus.google.com/u/0/111730946330475204627/about" />
+	{% if page.description %}
+		<meta name="description" content="{{page.description}}" />
+		{% else %}
+		<meta name="description" content="{{site.description}}" />
+	{% endif %}
    <link rel="start" href="{{ HOME_PATH }}" />
    <link rel="author" href="https://plus.google.com/u/0/111730946330475204627" />
-	{% if page.tags %}
-	<meta name="keywords" content="{{ page.tags }}" />
-	{% endif %}
+	{% if site.categories %}
+		<meta name="keywords" content="{{ site.categories }}" />
+	{% else %}
+		<meta name="keywords" content="{{ page.tags }}" />
+	{% else %}	
+		<meta name="keywords" content="叶斌的个人网站- 记录每天激情体验，还有支持健康照顾的各种想法" />
+		{% endif %}
 	{% if site.author.feedburner %}
   	<link rel="alternate" type="application/atom+xml" href="http://feeds.feedburner.com/{{ site.author.feedburner }}" title="RSS feed" />
-	{% endif %}
+		{% endif %}
 	{% if page.feed %}
-  	<link rel="alternate" type="application/atom+xml" href="{{ page.feed }}" title="RSS feed" />
+		<link rel="alternate" type="application/atom+xml" href="{{ page.feed }}" title="RSS feed" />
 	{% endif %}
 
    <!-- syntax highlighting CSS -->
