--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -13,7 +13,13 @@
 	{% endif %}
    <link rel="start" href="{{ HOME_PATH }}" />
    <link rel="author" href="https://plus.google.com/u/0/111730946330475204627" />
-	
+	{% if page.categories %}
+		<meta name="keywords" content="{{ page.categories }}" />
+	{% else %}
+		<meta name="keywords" content="{{ page.tags }}" />
+	{% else %}	
+		<meta name="keywords" content="叶斌的个人网站- 记录每天激情体验，还有支持健康照顾的各种想法" />
+	{% endif %}
 	{% if site.author.feedburner %}
   	<link rel="alternate" type="application/atom+xml" href="http://feeds.feedburner.com/{{ site.author.feedburner }}" title="RSS feed" />
 		{% endif %}
