--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -9,7 +9,7 @@
 	{% if page.description %}
 		<meta name="description" content="{{page.description}}" />
 		{% else %}
-		<meta name="description" content="{{site.description}}" />
+		<meta name="description" content="叶斌的个人网站" />
 	{% endif %}
    <link rel="start" href="{{ HOME_PATH }}" />
    <link rel="author" href="https://plus.google.com/u/0/111730946330475204627" />
