--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -18,7 +18,7 @@
 	{% else %}
 		<meta name="keywords" content="{{ page.tags }}" />
 	{% else %}	
-		<meta name="keywords" content="叶斌的个人网站- 记录每天激情体验，还有支持健康照顾的各种想法" />
+		<meta name="keywords" content="{{site.description}} />
 	{% endif %}
 	{% if site.author.feedburner %}
   	<link rel="alternate" type="application/atom+xml" href="http://feeds.feedburner.com/{{ site.author.feedburner }}" title="RSS feed" />
