--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -61,6 +61,9 @@
   			<br/>
   			(<a rel="licence" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Some rights reserved</a>)			
   		</span>
+		<span>
+		<a href="http://www.yebin.info/start.htm/">导航页</a>
+		</span>
   		<span class="engine">
   			Powered by <a href="http://github.com/mojombo/jekyll/" title="A static, minimalist CMS">Jekyll</a>
   		</span>
