--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -32,6 +32,9 @@
 
    <!-- Homepage CSS -->
    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/screen.css" type="text/css" />
+   <link href="{{ ASSET_PATH }}/css/prettify.css" rel="stylesheet" type="text/css" media="all">
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+		<script type="text/javascript" src="{{ ASSET_PATH }}/js/prettify.js"></script>
 
 </head>
 <body id="{{ page.section }}">
@@ -79,6 +82,14 @@
 <![endif]-->
 
   {% include JB/analytics %}
+
+<script type="text/javascript">
+!function ($) {
+    $(function(){
+        window.prettyPrint && prettyPrint();
+    });
+}(window.jQuery);
+</script>  
 </body>
 <!--[if IE 6]>
 	<script src="//letskillie6.googlecode.com/svn/trunk/2/zh_CN.js"></script>
