--- a/_includes/themes/mark-reid/post.html
+++ b/_includes/themes/mark-reid/post.html
@@ -9,7 +9,19 @@
 
   {{ content }}
 
-  
+  <!-- JiaThis Button BEGIN -->
+<script type="text/javascript" >
+var jiathis_config={
+	siteNum:5,
+	sm:"tsina,tqq,email,googleplus,twitter",
+	summary:"",
+	showClose:true,
+	hideMore:false
+}
+</script>
+<script type="text/javascript" src="http://v3.jiathis.com/code_mini/jiathis_r.js?btn=r5.gif&move=0" charset="utf-8"></script>
+<!-- JiaThis Button END -->
+
   
   <div class="prev-next">
   {% if page.next %}
