--- a/_includes/themes/mark-reid/post.html
+++ b/_includes/themes/mark-reid/post.html
@@ -9,12 +9,13 @@
 
   {{ content }}
 
-  <!-- JiaThis Button BEGIN -->
+<!-- JiaThis Button BEGIN -->
 <script type="text/javascript" >
 var jiathis_config={
 	siteNum:5,
 	sm:"tsina,tqq,email,googleplus,twitter",
 	summary:"",
+	boldNum:3,
 	showClose:true,
 	hideMore:false
 }
