--- a/_includes/themes/mark-reid/post.html
+++ b/_includes/themes/mark-reid/post.html
@@ -37,3 +37,7 @@ var jiathis_config={
 </div><!-- End Page -->
 
 {% include JB/comments %}
+  {% include JB/analytics %}
+<!-- JiaThis Button BEGIN -->
+<script type="text/javascript" src="http://v2.jiathis.com/code/jia.js" charset="utf-8"></script>
+<!-- JiaThis Button END -->
