--- a/_includes/themes/mark-reid/post.html
+++ b/_includes/themes/mark-reid/post.html
@@ -1,5 +1,5 @@
 <div id="page">
-	
+<div>	
   <h1 class="emphnext">{{ page.title }}</h1>
 <span class="date">Posted on {{ site.time | date_to_xmlschema }}</span> 
  <ul class="tag_box inline">
@@ -20,7 +20,7 @@
 </div>
 
 <!-- JiaThis Button END -->
-<p></p>  
+</div>
   <div class="prev-next">
   {% if page.next %}
     <a href="{{ page.next.url }}" class="next" title="{{ page.next.title }}">Next Post &rarr;</a>
