--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -80,13 +80,8 @@
 <![endif]-->
 
   {% include JB/analytics %}
-<script type="text/javascript" >
-var jiathis_config={
-	summary:"",
-	hideMore:false
-}
-</script>
-<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js" charset="utf-8"></script>
+<script type="text/javascript" src="http://v3.jiathis.com/code_mini/jiathis_r.js?btn=r5.gif&move=0" charset="utf-8"></script>
+<!-- JiaThis Button END -->
 
 </body>
 <!--[if IE 6]>
