--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -4,6 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+   <meta name="google-site-verification" content="YJPF_hJTXuwqtUP8mGUhfYBk8OuiUS0Wqx2BzKrh43A" />
    <title>{{ page.title }}</title>
    <meta name="me" content="https://plus.google.com/u/0/111730946330475204627/about" />
 	{% if page.description %}
