--- a/_includes/themes/mark-reid/post.html
+++ b/_includes/themes/mark-reid/post.html
@@ -21,7 +21,8 @@ var jiathis_config={
 	hideMore:true
 }
 </script>
-
+<script type="text/javascript" src="http://v3.jiathis.com/code_mini/jiathis_r.js?btn=r5.gif&move=0" charset="utf-8"></script>
+<!-- JiaThis Button END -->
 
   <div class="prev-next">
   {% if page.next %}
