--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -7,6 +7,7 @@
    <meta name="google-site-verification" content="YJPF_hJTXuwqtUP8mGUhfYBk8OuiUS0Wqx2BzKrh43A" />
    <title>{{ page.title }}</title>
    <meta name="me" content="https://plus.google.com/u/0/111730946330475204627/about" />
+   <meta name="google" content="notranslate" />
 	{% if page.description %}
 		<meta name="description" content="{{page.description}}" />
 		{% else %}
@@ -14,13 +15,7 @@
 	{% endif %}
    <link rel="start" href="{{ HOME_PATH }}" />
    <link rel="author" href="https://plus.google.com/u/0/111730946330475204627" />
-	{% if page.categories %}
-		<meta name="keywords" content="{{ page.categories }}" />
-	{% else %}
-		<meta name="keywords" content="{{ page.tags }}" />
-	{% else %}	
-		<meta name="keywords" content="{{site.description}} />
-	{% endif %}
+	<meta name="keywords" content="叶斌的个人网站" />
 	{% if site.author.feedburner %}
   	<link rel="alternate" type="application/atom+xml" href="http://feeds.feedburner.com/{{ site.author.feedburner }}" title="RSS feed" />
 		{% endif %}
