--- a/_includes/themes/mark-reid/post.html
+++ b/_includes/themes/mark-reid/post.html
@@ -36,11 +36,11 @@ var jiathis_config={
 
   <div id="related">
   <h2>Related Posts</h2>
-  <ul class="posts">
-    {% for post in site.related_posts limit:5 %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+<ul class="posts">
+  {% for post in site.posts limit:1 %}
+    <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ BASE_PATH }}{{ post.url }}" rel="no follow">{{ post.title }}</a></li>
+  {% endfor %}
+</ul>
 </div>
   
 </div>
