--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -35,7 +35,7 @@
 <div id="site">
   
   <div id="header">
-    <h1>
+   <h1 class="emphnext">
     	{{ page.title }}
     </h1>
     <ul class="nav">
