--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -35,11 +35,11 @@
 <div id="site">
   
   <div id="header">
-   <h1 class="emphnext">
-    	{{ page.title }}
+    <h1>
+    	<a href="{{ HOME_PATH }}" title="{{ site.title }}">{{ site.title }}</a>
+
     </h1>
     <ul class="nav">
-      <li><a class="home" href="{{ HOME_PATH }}">Home</a></li>
       <li><a  href="/archive.html">Archive</a></li>
       <li><a  href="/pages.html">Pages</a></li>
       <li><a  href="/categories.html">Categories</a></li>
