--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -52,7 +52,7 @@
   <div id="footer">
   	<address>
   		<span class="copyright">
-  			Content by <a href="/info/site.html">{{ site.author.name }}</a>. Design by 
+  			Content by <a href="http://www.google.com/recaptcha/mailhide/d?k=01pQWqEBdhPafoq8zGW2d99w==&c=V3fz3TZK9GkOgTUi5fXexp9i_NzeIefH8cbCepHNwe0=">{{ site.author.name }}</a>. Design by 
   			<a href="http://mark.reid.name/">Mark Reid</a>
   			<br/>
   			(<a rel="licence" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Some rights reserved</a>)			
