--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -75,7 +75,8 @@
 <![endif]-->
 
   {% include JB/analytics %}
-
+<a href="http://validator.w3.org/check?uri=http%3A%2F%2Fwww.yebin.info%2F"><img
+      src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
 
 </body>
 <!--[if IE 6]>
