--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -59,8 +59,8 @@
   		</span>
   		<span class="engine"><a href="http://www.yebin.info/start.htm">全科医生上网导航</a> | Powered by <a href="http://github.com/mojombo/jekyll/" title="A static, minimalist CMS">Jekyll</a>
   		</span>
-		<a href="http://validator.w3.org/check?uri=http%3A%2F%2Fwww.yebin.info%2F"><img
-      src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+		<span class="center"><a href="http://validator.w3.org/check?uri=http%3A%2F%2Fwww.yebin.info%2F"><img
+      src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a></center>
   	</address>
   </div>
   
