--- a/assets/themes/mark-reid/css/screen.css
+++ b/assets/themes/mark-reid/css/screen.css
@@ -475,7 +475,7 @@ p.delicious-extended:before { content: ' — '; }
 	display: block;
 }
 #footer .centre {
-	position: absolute;
+	position: relative;
 	text-align: center;
 	display: block;
 }
