--- a/_includes/themes/mark-reid/post.html
+++ b/_includes/themes/mark-reid/post.html
@@ -1,6 +1,6 @@
 <div id="page">
 
-  <h1 class="emphnext">{{ page.title }} - 叶斌的个人网站</h1>
+  <h1 class="emphnext">{{ page.title }}</h1>
 <span class="date">Posted on {{ site.time | date_to_xmlschema }}</span> 
  <ul class="tag_box inline">
   {% assign tags_list = page.tags %}
