--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -5,7 +5,7 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <meta name="google-site-verification" content="YJPF_hJTXuwqtUP8mGUhfYBk8OuiUS0Wqx2BzKrh43A" />
-   <title>{{ page.title }}</title>
+   <title>{{ page.title }} - 叶斌的个人网站</title>
    <meta name="me" content="https://plus.google.com/u/0/111730946330475204627/about" />
    <meta name="google" content="notranslate" />
 	{% if page.description %}
