--- a/_includes/themes/mark-reid/post.html
+++ b/_includes/themes/mark-reid/post.html
@@ -35,12 +35,18 @@ var jiathis_config={
   </div>
 
   <div id="related">
-  <h2>Related Posts</h2>
-<ul class="posts">
-  {% for post in site.related_posts limit:5 %}
-    <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ BASE_PATH }}{{ post.url }}" rel="no follow">{{ post.title }}</a></li>
+<h3>You might also like</h3>
+  <div>
+  {% for related in site.related_posts limit:5 %}
+    <div class="related-post">
+      <div class="title">
+        <a href="{{ related.url }}/" target="_top">
+          {{ related.title }}
+        </a>
+      </div>
+    </div>
   {% endfor %}
-</ul>
+  </div>
 </div>
   
 </div>
