--- a/_includes/themes/mark-reid/post.html
+++ b/_includes/themes/mark-reid/post.html
@@ -35,7 +35,7 @@ var jiathis_config={
   </div>
 
   <div id="related">
-<h3>You might also like</h3>
+<h3>Related posts</h3>
   <div>
   {% for related in site.related_posts limit:5 %}
     <div class="related-post">
