--- a/_includes/themes/mark-reid/post.html
+++ b/_includes/themes/mark-reid/post.html
@@ -1,10 +1,6 @@
 <div id="page">
 
   <h1 class="emphnext">{{ page.title }}</h1>
- <ul class="tag_box inline">
-  {% assign tags_list = page.tags %}
-  {% include JB/tags_list %}
-  </ul>
 
   {{ content }}
 
@@ -22,11 +18,22 @@ var jiathis_config={
 </script>
 <script type="text/javascript" src="http://v3.jiathis.com/code_mini/jiathis_r.js?btn=r5.gif&move=0" charset="utf-8"></script>
 <!-- JiaThis Button END -->
-<span class="date">Posted on {{ site.time | date_to_xmlschema }}</span> 
-  <div class="prev-next">
-  {% if page.next %}
-    <a href="{{ page.next.url }}" class="next" title="{{ page.next.title }}">Next Post &rarr;</a>
-  {% endif %}
+ <ul class="tag_box inline">
+  {% assign tags_list = page.tags %}
+  {% include JB/tags_list %}
+  </ul>
+  <div class="prev_next post_nav">
+    {% if page.previous.url %}
+    <p class="previous">
+        ?&nbsp;<a href="{{ page.previous.url }}/" rel="previous" title="{{ page.previous.title }}">{{ page.previous.title | truncatewords: 15 }}</a>
+    </p>
+    {% endif %}
+    {% if page.next.url %}
+    <p class="next">
+        <a href="{{ page.next.url }}/" rel="next" title="{{ page.next.title }}">{{ page.next.title | truncatewords: 15 }}</a>&nbsp;?
+    </p>
+    {% endif %}
+</div>
    
   {% if page.previous %}
     <a href="{{ page.previous.url }}" class="prev" title="{{ page.previous.title }}">&larr; Earlier Post</a>
