--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -40,10 +40,10 @@
 
     </h1>
     <ul class="nav">
-      <li><a  href="/archive.html">Archive</a></li>
+      <li><a  href="/articles.html">Articles</a></li>
+	  <li><a  href="/posts.html">Posts</a></li>
       <li><a  href="/pages.html">Pages</a></li>
       <li><a  href="/categories.html">Categories</a></li>
-      <li><a  href="/tags.html">Tags</a></li>
     </ul>
   </div>
 
