--- a/assets/themes/mark-reid/css/screen.css
+++ b/assets/themes/mark-reid/css/screen.css
@@ -335,7 +335,8 @@ p.excerpt { margin: 0; }
 	top: 1.5em;
 }
 /* @end */
-
+#post-footer{
+	background: #cbecfc}
 /* @group Code */
 pre {
 	margin: 1em 0 1.5em 0;
