--- a/assets/themes/mark-reid/css/screen.css
+++ b/assets/themes/mark-reid/css/screen.css
@@ -336,7 +336,7 @@ p.excerpt { margin: 0; }
 }
 /* @end */
 #post-footer{
-	background: #cbecfc}
+	background-color: #cbecfc}
 /* @group Code */
 pre {
 	margin: 1em 0 1.5em 0;
