--- a/_includes/themes/mark-reid/post.html
+++ b/_includes/themes/mark-reid/post.html
@@ -22,7 +22,7 @@ var jiathis_config={
 <script type="text/javascript" src="http://v3.jiathis.com/code_mini/jiathis_r.js?btn=r5.gif&move=0" charset="utf-8"></script>
 <!-- JiaThis Button END -->
 <div id="post-footer">
-Feel useful about this contenet? Share it to your friend by the float botton on the right side.
+Feel useful? Share it by the float botton on the right side.
 <p>
 喜欢这个页面的内容？欢迎使用右侧栏浮动按钮与朋友分享。</div>
 <div class="prev_next post_nav">
