--- a/assets/themes/mark-reid/css/screen.css
+++ b/assets/themes/mark-reid/css/screen.css
@@ -336,7 +336,7 @@ p.excerpt { margin: 0; }
 }
 /* @end */
 #post-footer{
-	padding: 5 5 5 5;
+	padding: 5px 5px 5px 5px;
 	MARGIN-RIGHT: auto; 
 	MARGIN-LEFT: auto;
 	background-color: #cbecfc;
