--- a/_includes/themes/mark-reid/post.html
+++ b/_includes/themes/mark-reid/post.html
@@ -8,23 +8,31 @@
   {{ content }}
 
 
+<div id="post-footer">
 <!-- JiaThis Button BEGIN -->
+<div id="jiathis_style_32x32">
+<a class="jiathis_button_tsina"></a>
+<a class="jiathis_button_tqq"></a>
+<a class="jiathis_button_copy"></a>
+<a class="jiathis_button_fb"></a>
+<a class="jiathis_button_funp"></a>
+<a class="jiathis_button_twitter"></a>
+<a class="jiathis_button_googleplus"></a>
+</div>
 <script type="text/javascript" >
 var jiathis_config={
-	siteNum:5,
-	sm:"email,tsina,tqq,googleplus,twitter",
+	siteNum:15,
+	sm:"copy,tsina,tqq,fb,googleplus,twitter,wong,funp,delicious",
 	summary:"",
-	boldNum:3,
-	showClose:true,
-	hideMore:true
+	boldNum:0,
+	hideMore:false
 }
 </script>
-<script type="text/javascript" src="http://v3.jiathis.com/code_mini/jiathis_r.js?btn=r5.gif&move=0" charset="utf-8"></script>
+<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js" charset="utf-8"></script>
 <!-- JiaThis Button END -->
-<div id="post-footer">
-Feel useful? Share it by the float botton on the right side.
-<p>
-喜欢这个页面的内容？欢迎使用右侧栏浮动按钮与朋友分享。</div>
+
+
+</div>
 <div class="prev_next post_nav">
     {% if page.previous.url %}
     <p class="previous">
